--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@ body {
 	font-size: 16px;
 }
 
-/*Jumbotron*/
+/*ini Jumbotron*/
 .jumbotron {
 	background-image: url(images/background/bbg.jpg);
 	background-size: cover;
@@ -29,7 +29,7 @@ body {
 	width: 400px;
 	border-width: 3px;
 }
-/*Akhir Jumbotron*/
+/*ini Akhir Jumbotron*/
 
 /*Navbar*/
 .navbar {
@@ -47,9 +47,9 @@ body {
 .navbar .navbar-brand  {
 	font-size: 30px;
 }
-/*Akhir Navbar*/
+/*ini Akhir Navbar*/
 
-/*Footer*/
+/*ini Footer*/
 .footer {
 	margin-top: 150px;
 	border-width: 3px;
@@ -59,9 +59,9 @@ body {
 	margin-top: 60px;
 	margin-bottom: 50px;
 }
-/*Akhir Footer*/
+/*ini Akhir Footer*/
 
-/*Home*/
+/*ini Home*/
 .judul {
 	margin-bottom: 120px;
 }
@@ -70,4 +70,4 @@ body {
 	box-shadow: 2px 2px 10px rgba(0,0,0,0.4);	
 }
 
-/*Akhir Home*/
+/*ini Akhir Home*/
